--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "bold idea html and tailwindcss challenge",
   "main": "index.js",
   "scripts": {
-    "build:tailwind": "tailwind build src/input.css -o public/output.css"
+    "build:tailwind": "tailwind build -i src/input.css -o public/output.css"
   },
   "author": "",
   "license": "ISC"
